RESOLVED FIXED288360
[GTK][WPE] Destroy AcceleratedSurface when ThreadedCompositor is invalidated
https://bugs.webkit.org/show_bug.cgi?id=288360
Summary [GTK][WPE] Destroy AcceleratedSurface when ThreadedCompositor is invalidated
Carlos Garcia Campos
Reported 2025-02-24 02:52:45 PST
.
Attachments
Carlos Garcia Campos
Comment 1 2025-02-24 02:54:00 PST
EWS
Comment 2 2025-02-24 04:28:44 PST
Committed 290942@main (48a664f90c34): <https://commits.webkit.org/290942@main> Reviewed commits have been landed. Closing PR #41191 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.