[GTK][WPE] Destroy AcceleratedSurface when ThreadedCompositor is invalidated https://bugs.webkit.org/show_bug.cgi?id=288360

Reviewed by Nikolas Zimmermann.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositor.cpp:
(WebKit::ThreadedCompositor::invalidate):

Canonical link: https://commits.webkit.org/290942@main